# strace-tui

./: .gitignore  Cargo.toml  DEMO.md  LICENSE-APACHE  LICENSE-MIT  README.md  test_trace.txt
.github/: copilot-instructions.md
examples/: syscall_test.rs  syscall_test_big.rs  syscall_test_many_processes.rs  test_parser.rs
src/: lib.rs  main.rs
src/parser/: backtrace_parser.rs  line_parser.rs  mod.rs  resolver.rs  types.rs
src/tui/: app.rs  events.rs  mod.rs  process_graph.rs  syscall_colors.rs  ui.rs
tests/: integration_test.rs
