[package]
name = "strace-tui"
version = "0.1.0"
edition = "2024"

[lib]
name = "strace_tui"
path = "src/lib.rs"

[[bin]]
name = "strace-tui"
path = "src/main.rs"

[dependencies]
nom = "8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
tempfile = "3.13"
addr2line = "0.24"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Logging
log = "0.4"
env_logger = "0.11"
dirs = "5.0"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.13"
