[package]
name = "strace-tui"
version = "1.0.0"
description = " A terminal user interface (TUI) for visualizing and exploring strace output."
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rodrigodd/strace-tui"

[lib]
name = "strace_tui"
path = "src/lib.rs"

[[bin]]
name = "strace-tui"
path = "src/main.rs"

[dependencies]
nom = "8.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.5.60", features = ["derive"] }
thiserror = "2.0.18"
tempfile = "3.25.0"
addr2line = "0.26.0"

# TUI
ratatui = "0.30.0"
crossterm = "0.29.0"

# Logging
log = "0.4.29"
env_logger = "0.11.9"
dirs = "6.0.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.25.0"
